# Inline-Engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CopyRuntime.cmake  GetPlatform.cmake  Inline-Engine.sln  LICENSE  Paths.cmake  README.md  Report20161125-2211 (2).diagsession  Utils.cmake  WholeArchive.cmake  appveyor.yml
Engine/: CMakeLists.txt
Engine/AssetLibrary/: AssetCache.hpp  AssetLibrary.vcxproj  AssetLibrary.vcxproj.filters  AssetStore.cpp  AssetStore.hpp  CMakeLists.txt  GraphicsMeshCache.cpp  GraphicsMeshCache.hpp  Image.cpp  Image.hpp  ImageCache.cpp  ImageCache.hpp  MaterialCache.cpp  MaterialCache.hpp  MaterialShaderCache.cpp  MaterialShaderCache.hpp  Model.cpp  Model.hpp
Engine/BaseLibrary/: Any.hpp  ArrayView.hpp  AtScopeExit.hpp  BaseLibrary.vcxproj  BaseLibrary.vcxproj.filters  BitOperations.hpp  BitflagEnum.hpp  CMakeLists.txt  Color.hpp  Common.cpp  Common.hpp  Common_tmp.cpp  Common_tmp.hpp  Delegate.hpp  DynamicTuple.hpp  EnumFlag.hpp  Event.hpp  Graph_All.hpp  HashCombine.hpp  Logging  Logging_All.hpp  MemoryLeakDetector.hpp  Range.hpp  ReadMe.txt  Rect.hpp  RingAllocationEngine.cpp  RingAllocationEngine.hpp  RingBuffer.hpp  ScalarLiterals.hpp  Serialization  Serialization_All.hpp  Singleton.hpp  SmartPtrCast.hpp  SpinMutex.cpp  SpinMutex.hpp  Spinlock.cpp  Spinlock.hpp  StackTrace.hpp  Stream.hpp  StringUtil.hpp  (+13 more)
Engine/Core/: Actor.cpp  Actor.hpp  ActorBehavior.cpp  ActorBehavior.hpp  ActorScript.cpp  ActorScript.hpp  Actors.hpp  Behavior.cpp  Behavior.hpp  CMakeLists.txt  Common.hpp  Core.cpp  Core.hpp  Core.vcxproj  Core.vcxproj.filters  DirectionalLightPart.cpp  DirectionalLightPart.hpp  EngineCore.cpp  EngineCore.hpp  GameWorld.cpp  GameWorld.hpp  GraphicsCore.cpp  GraphicsCore.hpp  InputCore.cpp  InputCore.h  InputCore.hpp  MeshComponent.cpp  MeshComponent.hpp  MeshPart.cpp  MeshPart.hpp  NetworkCore.cpp  NetworkCore.hpp  Part.cpp  Part.hpp  PerspCameraPart.cpp  PerspCameraPart.hpp  PerspectiveCameraComponent.cpp  PerspectiveCameraComponent.hpp  PhysicsCore.cpp  PhysicsCore.hpp  (+22 more)
Engine/GameFoundationLibrary/: CMakeLists.txt
Engine/GameLogic/: Archive.hpp  AutoRegisterComponent.hpp  BasicLevel.hpp  CMakeLists.txt  Component.hpp  ComponentClassFactory.hpp  ComponentFactory.cpp  ComponentFactory.hpp  ComponentMatrix.cpp  ComponentMatrix.hpp  ComponentMatrixIterator.hpp  ComponentRange.hpp  ComponentScheme.cpp  ComponentScheme.hpp  ComponentStore.cpp  ComponentStore.hpp  ComponentVector.hpp  ContiguousVector.hpp  Entity.cpp  Entity.hpp  EntitySchemeSet.cpp  EntitySchemeSet.hpp  EntityStore.cpp  EntityStore.hpp  GameEntity.cpp  GameEntity.hpp  GameWorld.cpp  GameWorld.hpp  Hook.hpp  Level.cpp  Level.hpp  LevelArchive.hpp  Scene.cpp  Scene.hpp  Simulation.cpp  Simulation.hpp  System.hpp  TransformComponent.hpp  VariantArchive.hpp  World.cpp  (+1 more)
Engine/GraphicsApi_D3D12/: CMakeLists.txt  CantFindAName.cpp  CantFindAName.hpp  CapabilityQuery.cpp  CapabilityQuery.hpp  CommandAllocator.cpp  CommandAllocator.hpp  CommandList.cpp  CommandList.hpp  CommandQueue.cpp  CommandQueue.hpp  DescriptorHeap.cpp  DescriptorHeap.hpp  DisableWin32Macros.h  EnableWin32Macros.h  ExceptionExpansions.cpp  ExceptionExpansions.hpp  Fence.cpp  Fence.hpp  GraphicsApi.cpp  GraphicsApi.hpp  GraphicsApi_D3D12.vcxproj  GraphicsApi_D3D12.vcxproj.filters  GraphicsCommandList.cpp  GraphicsCommandList.hpp  GxapiManager.cpp  GxapiManager.hpp  Misc.cpp  NativeCast.cpp  NativeCast.hpp  PipelineState.cpp  PipelineState.hpp  ReadMe.txt  Resource.cpp  Resource.hpp  RootSignature.cpp  RootSignature.hpp  SwapChain.cpp  SwapChain.hpp  notneeded_ICommandQueue.cpp
Engine/GraphicsApi_LL/: Common.hpp  DescriptorHandle.hpp  DisableWin32Macros.h  EnableWin32Macros.h  Exception.hpp  HardwareCapability.hpp  ICantFindAName.hpp  ICommandAllocator.hpp  ICommandList.hpp  ICommandQueue.hpp  IComputeCommandList.hpp  ICopyCommandList.hpp  IDescriptorHeap.hpp  IFence.hpp  IGraphicsApi.hpp  IGraphicsCommandList.hpp  IGxapiManager.hpp  IPipelineState.hpp  IResource.hpp  IRootSignature.hpp  ISwapChain.hpp  Native.hpp
Engine/GraphicsEngine/: Definitions.hpp  Exception.hpp  IGraphicsEngine.hpp  IScene.hpp
Engine/GraphicsEngine_LL/: AsyncUploader.cpp  AsyncUploader.hpp  AutoRegisterNode.hpp  BackBuffer.cpp  BackBuffer.hpp  BackBufferManager.cpp  BackBufferManager.hpp  BasicCamera.cpp  BasicCamera.hpp  BasicCommandList.cpp  BasicCommandList.hpp  Binder.cpp  Binder.hpp  BindingManager.hpp  BufferHeap.hpp  CMakeLists.txt  CSM.hpp  Camera.cpp  Camera.hpp  Camera2D.cpp  Camera2D.hpp  CommandAllocatorPool.cpp  CommandAllocatorPool.hpp  CommandListPool.cpp  CommandListPool.hpp  CommandListTasks.hpp  CommandQueue.hpp  ComputeCommandList.cpp  ComputeCommandList.hpp  ConstBufferHeap.cpp  ConstBufferHeap.hpp  ConstBufferManager.cpp  ConstBufferManager.hpp  ConstBufferPage.cpp  ConstBufferPage.hpp  CopyCommandList.cpp  CopyCommandList.hpp  CriticalBufferHeap.cpp  CriticalBufferHeap.hpp  Cubemap.cpp  (+141 more)
Engine/GraphicsFoundationLibrary/: CMakeLists.txt
Engine/GraphicsPipeline/: CMakeLists.txt
Engine/Gui/: Gui.vcxproj
Engine/GuiEngine/: AbsoluteLayout.cpp  AbsoluteLayout.hpp  BlankShared.hpp  Board.cpp  Board.hpp  Button.cpp  Button.hpp  CMakeLists.txt  CheckBox.cpp  CheckBox.hpp  Collapsable.cpp  Collapsable.hpp  Control.cpp  Control.hpp  Control2.cpp  Control2.hpp  ControlStateTracker.cpp  ControlStateTracker.hpp  ControlStyle.hpp  ControlTracer.cpp  ControlTracer.hpp  Event.hpp  Frame.cpp  Frame.hpp  GraphicalControl.hpp  GraphicsContext.hpp  Grid.cpp  Grid.hpp  Gui.cpp  Gui.hpp  GuiButton.cpp  GuiButton.hpp  GuiCanvas.hpp  GuiCheckBox.cpp  GuiCheckBox.hpp  GuiCollapsable.cpp  GuiCollapsable.hpp  GuiControl.cpp  GuiControl.hpp  GuiEngine.cpp  (+67 more)
Engine/NetworkEngine/: Definitions.hpp  Enums.hpp  IPAddress.cpp  IPAddress.hpp  ISocket.cpp  ISocket.hpp  Init.hpp  Net.hpp  NetworkBuffer.hpp  NetworkDispatcher.hpp  NetworkEngine.vcxproj  NetworkEngine.vcxproj.filters  NetworkMessage.cpp  NetworkMessage.hpp  Socket.cpp  Socket.hpp  SocketImpl.hpp  SocketTypes.hpp  SpinLock.hpp  (+13 more)
(+1042 files in other folders)
